Added Tile and tile_specs
- Added backbone js
- Added undescore js
- Added tile_definitions and constants
- Still WIP as tests aren't passing

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,13 +12,16 @@
 
   <!-- include dependencies files here... -->
   <script type="text/javascript" src="lib/jquery.js"></script>
+  <script type="text/javascript" src="lib/underscore-min.js"></script>
+  <script type="text/javascript" src="lib/backbone-min.js"></script>
   <script type="text/javascript" src="lib/jcanvas.min.js"></script>
-  <script type="text/javascript" src="spec/factories/object_factory.js"></script>
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/feature_spec.js"></script>
+  <script type="text/javascript" src="spec/tile_spec.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="javascripts/feature.js"></script>
+  <script type="text/javascript" src="javascripts/constants.js"></script>
+  <script type="text/javascript" src="javascripts/tile_definitions.js"></script>
+  <script type="text/javascript" src="javascripts/tile.js"></script>
 
   <script type="text/javascript">
     (function() {
