--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <link rel="stylesheet" type="text/css" href="styles/breeder.css">
   <!-- include dependencies files here... -->
   <script type="text/javascript" src="lib/jquery.js"></script>
+  <script type="text/javascript" src="lib/underscore-min.js"></script>
+  <script type="text/javascript" src="lib/backbone-min.js"></script>
   <script type="text/javascript" src="lib/jcanvas.min.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="javascripts/feature.js"></script>
+  <script type="text/javascript" src="javascripts/constants.js"></script>
+  <script type="text/javascript" src="javascripts/tile_definitions.js"></script>
+  <script type="text/javascript" src="javascripts/tile.js"></script>
 </head>
 
 <body>
