Convert specs to use coffee script
to run specs execute: cake spec

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="lib/backbone-min.js"></script>
   <script type="text/javascript" src="lib/jcanvas.min.js"></script>
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/tile_spec.js"></script>
+  <script type="text/javascript" src="spec/build/specs.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="javascripts/constants.js"></script>
