Finish feature_continues method on Tile with specs

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -19,9 +19,7 @@
   <script type="text/javascript" src="spec/build/specs.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="javascripts/constants.js"></script>
-  <script type="text/javascript" src="javascripts/tile_definitions.js"></script>
-  <script type="text/javascript" src="javascripts/tile.js"></script>
+  <script type="text/javascript" src="javascripts/castello.js"></script>
 
   <script type="text/javascript">
     (function() {
