--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <html>
 <head>
-  <title>Breeder</title>
+  <title>Castello</title>
 
-  <link rel="stylesheet" type="text/css" href="styles/breeder.css">
   <!-- include dependencies files here... -->
   <script type="text/javascript" src="lib/jquery.js"></script>
   <script type="text/javascript" src="lib/underscore-min.js"></script>
   <script type="text/javascript" src="lib/backbone-min.js"></script>
   <script type="text/javascript" src="lib/jcanvas.min.js"></script>
-
-  <!-- include source files here... -->
-  <script type="text/javascript" src="javascripts/constants.js"></script>
-  <script type="text/javascript" src="javascripts/tile_definitions.js"></script>
-  <script type="text/javascript" src="javascripts/tile.js"></script>
 </head>
 
 <body>
-  <canvas id="main_canvas" width="800" height="600"></canvas>
-  <script type="text/javascript" src="javascripts/app.js"></script>
+  <canvas id="main_canvas" width="880" height="880"></canvas>
+  <script type="text/javascript" src="javascripts/castello.js"></script>
 </body>
 </html>
